envoy-config.yaml
static_resources:
  listeners:
  - name: main_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                direct_response:
                  status: 404
                  body:
                    inline_string: "not routed"
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              failure_mode_allow: false
              clear_route_cache: true
              status_on_error:
                code: FORBIDDEN
              http_service:
                server_uri:
                  uri: http://ps-enforcer:9090
                  cluster: ps_enforcer_http
                  timeout: 1.000s
                path_prefix: "/check"
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service:
                google_grpc:
                  target_uri: ps-enforcer:9091
                  stat_prefix: ps_ext_proc
              message_timeout: 5.000s
              failure_mode_allow: false
              processing_mode:
                request_header_mode: SEND
                request_body_mode: STREAMED
                request_trailer_mode: SKIP
                response_header_mode: SEND
                response_body_mode: STREAMED
                response_trailer_mode: SKIP
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: promptshield_grpc
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: promptshield_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: ps-enforcer, port_value: 9091 }

  - name: ps_enforcer_http
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ps_enforcer_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: ps-enforcer, port_value: 9090 }

admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
